--- a/adsdk/src/main/res/layout/had_card_large.xml
+++ b/adsdk/src/main/res/layout/had_card_large.xml
@@ -79,7 +79,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="4dp"
                         android:layout_toRightOf="@+id/native_title"
-                        android:background="@drawable/had_badge_bg_dark"
+                        android:background="@drawable/had_badge_bg"
                         android:gravity="center"
                         android:paddingBottom="2dp"
                         android:paddingLeft="4dp"
