--- a/app/src/main/res/values/ad_styles.xml
+++ b/app/src/main/res/values/ad_styles.xml
@@ -14,7 +14,7 @@
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/had_action_button_bg</item>
+        <item name="android:background">@drawable/had_action_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 
@@ -24,7 +24,7 @@
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:background">@drawable/had_action_button_bg</item>
+        <item name="android:background">@drawable/had_action_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
