--- a/adsdk/src/main/res/values/had_styles.xml
+++ b/adsdk/src/main/res/values/had_styles.xml
@@ -34,6 +34,13 @@
         <item name="android:background">@drawable/had_green_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
+    <style name="AdButtonFullStyle_Flat" parent="Base.Widget.AppCompat.Button.Borderless.Colored">
+        <item name="android:layout_height">36dp</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:background">@drawable/had_green_bg</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 
     <!--for lock screen-->
     <style name="AdCMStageTextStyle" parent="@android:style/TextAppearance">
