--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,32 +16,6 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/app_usage"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="APPUSAGE权限" />
-
-            <Button
-                android:id="@+id/gt_outer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-
-                android:text="GT测试" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal">
-
-            <Button
                 android:id="@+id/interstitial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -51,13 +25,13 @@
                 android:text="插屏测试" />
 
             <Button
-                android:id="@+id/complex"
+                android:id="@+id/reward_video"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
-                android:text="复合测试" />
+                android:text="激励视频" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,13 +41,13 @@
             android:orientation="horizontal">
 
             <Button
-                android:id="@+id/reward_video"
+                android:id="@+id/banner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="2dp"
                 android:layout_weight="1"
                 android:onClick="onClick"
-                android:text="激励视频" />
+                android:text="Banner" />
 
             <Button
                 android:id="@+id/native_common"
@@ -83,30 +57,6 @@
                 android:layout_weight="1"
                 android:onClick="onClick"
                 android:text="NATIVE通用布局" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/show_reward"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="2dp"
-                android:layout_weight="1"
-                android:onClick="onClick"
-                android:text="展示激励视频" />
-
-            <Button
-                android:id="@+id/reward_count"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="2dp"
-                android:layout_weight="1"
-                android:text="0" />
         </LinearLayout>
 
         <LinearLayout
