--- a/app/src/main/res/layout/ad_common_native_card_medium.xml
+++ b/app/src/main/res/layout/ad_common_native_card_medium.xml
@@ -74,14 +74,14 @@
                         android:layout_height="@dimen/dp_36"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
-                        android:layout_marginRight="@dimen/dp_16"
                         android:contentDescription="@null"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
 
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/dp_16"
                         android:layout_toRightOf="@+id/common_icon"
                         android:gravity="center_vertical"
                         android:orientation="vertical">
