--- a/adsdk/src/main/res/layout/had_card_tiny.xml
+++ b/adsdk/src/main/res/layout/had_card_tiny.xml
@@ -1,152 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:layout_gravity="center">
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginBottom="4dp">
+        android:background="@android:color/white"
+        android:orientation="horizontal"
+        android:paddingBottom="14dp"
+        android:paddingLeft="6dp"
+        android:paddingRight="6dp"
+        android:paddingTop="14dp">
+
+        <RelativeLayout
+            android:id="@+id/native_cover_info"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <ImageView
+                android:id="@+id/native_image_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@null"
+                android:scaleType="fitCenter" />
+
+            <RelativeLayout
+                android:id="@+id/native_media_cover"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="@null"
+                android:visibility="gone" />
+        </RelativeLayout>
+
+        <ImageView
+            android:id="@+id/native_icon"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:contentDescription="@null"
+            android:visibility="gone" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="horizontal"
-            android:paddingBottom="6dp"
-            android:paddingLeft="6dp"
-            android:paddingRight="6dp"
-            android:paddingTop="6dp">
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="4dp"
+            android:layout_weight="1"
+            android:orientation="vertical">
 
-            <RelativeLayout
-                android:id="@+id/native_cover_info"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1">
+            <TextView
+                android:id="@+id/native_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toLeftOf="@+id/common_sponsored_label"
+                android:ellipsize="marquee"
+                android:gravity="left|top"
+                android:singleLine="true"
+                android:text="Charge Master"
+                android:textColor="@android:color/black"
+                android:textSize="20sp" />
 
-                <ImageView
-                    android:id="@+id/native_image_cover"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@null"
-                    android:scaleType="fitCenter" />
-
-                <RelativeLayout
-                    android:id="@+id/native_media_cover"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:contentDescription="@null"
-                    android:visibility="gone" />
-            </RelativeLayout>
-
-            <ImageView
-                android:id="@+id/native_icon"
+            <TextView
+                android:id="@+id/native_sub_title"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:contentDescription="@null"
+                android:ellipsize="marquee"
+                android:gravity="left|top"
+                android:singleLine="true"
+                android:textColor="@color/secondaryColor"
+                android:textSize="12sp"
                 android:visibility="gone" />
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/native_social"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:ellipsize="marquee"
+                android:gravity="left|top"
+                android:singleLine="true"
+                android:textColor="@color/secondaryColor"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/native_detail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="4dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
+                android:layout_marginTop="4dp"
+                android:minHeight="24dp"
+                android:ellipsize="marquee"
+                android:gravity="left|center_vertical"
+                android:singleLine="true"
+                android:textColor="@color/secondaryColor"
+                android:textSize="12sp" />
 
-                <TextView
-                    android:id="@+id/native_title"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:foregroundGravity="bottom"
+                android:layout_marginTop="6dp">
+
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/native_action_btn"
+                    style="@style/AdButtonFullStyle_Flat"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_toLeftOf="@+id/common_sponsored_label"
-                    android:ellipsize="marquee"
-                    android:gravity="left|top"
-                    android:singleLine="true"
-                    android:text="Charge Master"
-                    android:textColor="@android:color/black"
-                    android:textSize="20sp" />
-
-                <TextView
-                    android:id="@+id/native_sub_title"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:ellipsize="marquee"
-                    android:gravity="left|top"
-                    android:singleLine="true"
-                    android:textColor="@color/secondaryColor"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/native_social"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:ellipsize="marquee"
-                    android:gravity="left|top"
-                    android:singleLine="true"
-                    android:textColor="@color/secondaryColor"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
-
-                <TextView
-                    android:id="@+id/native_detail"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:ellipsize="marquee"
-                    android:gravity="left|center_vertical"
-                    android:singleLine="true"
-                    android:textColor="@color/secondaryColor"
-                    android:textSize="12sp" />
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="left"
-                    android:layout_marginBottom="4dp"
-                    android:layout_marginTop="6dp">
-
-                    <android.support.v7.widget.AppCompatButton
-                        android:id="@+id/native_action_btn"
-                        style="@style/AdButtonFullStyle_Flat"
-                        android:layout_width="wrap_content"
-                        android:layout_height="30dp"
-                        android:background="@drawable/had_action_bg"
-                        android:ellipsize="end"
-                        android:gravity="center"
-                        android:lines="1"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
-                        android:text="Learn More"
-                        android:textColor="@android:color/white"
-                        android:textSize="14sp"
-                        android:textStyle="bold" />
-                </FrameLayout>
-            </LinearLayout>
+                    android:layout_height="30dp"
+                    android:background="@drawable/had_action_bg"
+                    android:ellipsize="end"
+                    android:gravity="center"
+                    android:lines="1"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:text="Learn More"
+                    android:textColor="@android:color/white"
+                    android:textSize="14sp"
+                    android:textStyle="bold" />
+            </RelativeLayout>
         </LinearLayout>
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/native_sponsored_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/had_badge_bg"
-            android:gravity="center"
-            android:paddingLeft="4dp"
-            android:paddingRight="4dp"
-            android:layout_marginLeft="2dp"
-            android:text="AD"
-            android:textColor="@android:color/black"
-            android:textSize="12sp"
-            android:textStyle="bold" />
+    <TextView
+        android:id="@+id/native_sponsored_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:background="@drawable/had_badge_bg"
+        android:gravity="center"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:text="AD"
+        android:layout_gravity="right|bottom"
+        android:textColor="@android:color/black"
+        android:textSize="12sp"
+        android:layout_marginBottom="14dp"
+        android:layout_marginRight="6dp"
+        android:textStyle="bold" />
 
-        <RelativeLayout
-            android:id="@+id/native_ad_choices_container"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right"
-            android:padding="4dp" />
-    </FrameLayout>
-</LinearLayout>
+    <RelativeLayout
+        android:id="@+id/native_ad_choices_container"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right"
+        android:padding="4dp" />
+</FrameLayout>
