--- a/adsdk/src/main/res/drawable/had_action_bg.xml
+++ b/adsdk/src/main/res/drawable/had_action_bg.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="true">
         <shape>
             <corners android:radius="2dp" />
-            <solid android:color="@color/colorBtnBluePressed" />
+            <solid android:color="@color/had_colorBtnBluePressed" />
         </shape>
     </item>
     <item>
         <shape>
             <corners android:radius="2dp" />
-            <solid android:color="@color/colorBtnBlue" />
+            <solid android:color="@color/had_colorBtnBlue" />
         </shape>
     </item>
 </selector>
