--- a/adsdk/src/main/res/drawable/had_close_bg.xml
+++ b/adsdk/src/main/res/drawable/had_close_bg.xml
@@ -3,13 +3,13 @@
     <item android:state_pressed="true">
         <shape>
             <corners android:radius="2dp" />
-            <solid android:color="@color/colorCloseBtnPressed" />
+            <solid android:color="@color/had_colorCloseBtnPressed" />
         </shape>
     </item>
     <item>
         <shape>
             <corners android:radius="2dp" />
-            <solid android:color="@color/colorCloseBtn" />
+            <solid android:color="@color/had_colorCloseBtn" />
         </shape>
     </item>
 </selector>
