--- a/adsdk/src/main/res/layout/had_card_large.xml
+++ b/adsdk/src/main/res/layout/had_card_large.xml
@@ -98,7 +98,7 @@
                         android:gravity="left|top"
                         android:singleLine="true"
                         android:text="Charge Master"
-                        android:textColor="@color/primaryColor"
+                        android:textColor="@color/had_primaryColor"
                         android:textSize="18sp" />
 
                 </RelativeLayout>
@@ -111,7 +111,7 @@
                     android:layout_gravity="center_horizontal"
                     android:gravity="center"
                     android:singleLine="true"
-                    android:textColor="@color/secondaryColor"
+                    android:textColor="@color/had_secondaryColor"
                     android:textSize="12sp"
                     android:visibility="gone" />
 
@@ -142,7 +142,7 @@
             android:gravity="center"
             android:maxLines="3"
             android:text="detail"
-            android:textColor="@color/secondaryColor"
+            android:textColor="@color/had_secondaryColor"
             android:textSize="15sp"
             android:visibility="gone" />
 
