--- a/adsdk/src/main/res/layout/had_card_mix.xml
+++ b/adsdk/src/main/res/layout/had_card_mix.xml
@@ -100,7 +100,7 @@
                             android:paddingRight="4dp"
                             android:singleLine="false"
                             android:text="Charge Master"
-                            android:textColor="@color/primaryColor"
+                            android:textColor="@color/had_primaryColor"
                             android:textSize="24sp" />
 
                         <TextView
@@ -133,7 +133,7 @@
                         android:gravity="center"
                         android:singleLine="true"
                         android:text="sub title"
-                        android:textColor="@color/secondaryColor"
+                        android:textColor="@color/had_secondaryColor"
                         android:textSize="12sp"
                         android:visibility="gone" />
 
@@ -162,7 +162,7 @@
                     android:gravity="center"
                     android:maxLines="3"
                     android:text="detail"
-                    android:textColor="@color/secondaryColor"
+                    android:textColor="@color/had_secondaryColor"
                     android:textSize="15sp"
                     android:visibility="gone" />
             </LinearLayout>
