--- a/adsdk/src/main/res/layout/had_card_tiny.xml
+++ b/adsdk/src/main/res/layout/had_card_tiny.xml
@@ -69,7 +69,7 @@
                 android:ellipsize="marquee"
                 android:gravity="left|top"
                 android:singleLine="true"
-                android:textColor="@color/secondaryColor"
+                android:textColor="@color/had_secondaryColor"
                 android:textSize="12sp"
                 android:visibility="gone" />
 
@@ -80,7 +80,7 @@
                 android:ellipsize="marquee"
                 android:gravity="left|top"
                 android:singleLine="true"
-                android:textColor="@color/secondaryColor"
+                android:textColor="@color/had_secondaryColor"
                 android:textSize="12sp"
                 android:visibility="gone" />
 
@@ -93,7 +93,7 @@
                 android:ellipsize="marquee"
                 android:gravity="left|center_vertical"
                 android:singleLine="true"
-                android:textColor="@color/secondaryColor"
+                android:textColor="@color/had_secondaryColor"
                 android:textSize="12sp" />
 
             <RelativeLayout
