--- a/adsdk/src/main/res/values/had_colors.xml
+++ b/adsdk/src/main/res/values/had_colors.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primaryColor">@android:color/black</color>
-    <color name="secondaryColor">@android:color/darker_gray</color>
-    <color name="colorBtnBlue">#FF4080FF</color>
-    <color name="colorBtnBluePressed">#FF3973E5</color>
-    <color name="colorCloseBtn">#AAEEEEEE</color>
-    <color name="colorCloseBtnPressed">#AACCCCCC</color>
+    <color name="had_primaryColor">@android:color/black</color>
+    <color name="had_secondaryColor">@android:color/darker_gray</color>
+    <color name="had_colorBtnBlue">#FF4080FF</color>
+    <color name="had_colorBtnBluePressed">#FF3973E5</color>
+    <color name="had_colorCloseBtn">#AAEEEEEE</color>
+    <color name="had_colorCloseBtnPressed">#AACCCCCC</color>
 </resources>
