1. 增加按钮和AD之间的边距

--- a/adsdk/src/main/res/layout/had_card_tiny.xml
+++ b/adsdk/src/main/res/layout/had_card_tiny.xml
@@ -110,6 +110,7 @@
                     android:background="@drawable/had_action_bg"
                     android:ellipsize="end"
                     android:gravity="center"
+                    android:layout_marginRight="30dp"
                     android:lines="1"
                     android:paddingLeft="10dp"
                     android:paddingRight="10dp"
