--- a/adsdk/src/main/res/layout/had_card_small.xml
+++ b/adsdk/src/main/res/layout/had_card_small.xml
@@ -8,6 +8,7 @@
         android:id="@+id/native_native_ad_unit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
         android:background="@android:color/white"
         android:orientation="vertical">
 
