--- a/adsdk/src/main/res/layout/had_card_small.xml
+++ b/adsdk/src/main/res/layout/had_card_small.xml
@@ -109,18 +109,34 @@
 
                 </RelativeLayout>
 
-                <TextView
-                    android:id="@+id/native_sub_title"
+                <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:ellipsize="marquee"
-                    android:gravity="left|top"
-                    android:singleLine="true"
-                    android:text="sub title"
-                    android:textColor="@color/had_secondaryColor"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
+                    android:layout_height="wrap_content">
 
+                    <TextView
+                        android:id="@+id/native_detail"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:gravity="left|top"
+                        android:singleLine="true"
+                        android:text="sub title"
+                        android:textColor="@color/had_secondaryColor"
+                        android:textSize="12sp"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/native_sub_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:gravity="left|top"
+                        android:singleLine="true"
+                        android:text="sub title"
+                        android:textColor="@color/had_secondaryColor"
+                        android:textSize="12sp"
+                        android:visibility="gone" />
+                </FrameLayout>
             </LinearLayout>
 
             <android.support.v7.widget.AppCompatButton
