--- a/adsdk/src/main/res/layout/had_card_ch.xml
+++ b/adsdk/src/main/res/layout/had_card_ch.xml
@@ -146,7 +146,7 @@
                         android:layout_alignTop="@+id/ad_cm_stage_hint"
                         android:orientation="horizontal">
 
-                        <com.dock.vost.view.BlinkImageView
+                        <com.dock.vost.view.BlinkView
                             android:id="@+id/ad_cm_speed_indicator"
                             android:layout_width="23dp"
                             android:layout_height="23dp"
@@ -154,29 +154,29 @@
                             android:scaleType="centerInside"
                             android:src="@drawable/had_speed" />
 
-                        <com.dock.vost.view.DotProgress
+                        <com.dock.vost.view.DotView
                             android:id="@+id/ad_cm_dot_progress_1"
                             android:layout_width="0dp"
                             android:layout_height="23dp"
                             android:layout_weight="1"
                             app:dotRadius="1.5dp" />
 
-                        <com.dock.vost.view.BlinkImageView
+                        <com.dock.vost.view.BlinkView
                             android:id="@+id/ad_cm_continuous_indicator"
                             android:layout_width="23dp"
                             android:layout_height="23dp"
                             android:scaleType="centerInside"
                             android:src="@drawable/had_continuous" />
 
-                        <com.dock.vost.view.DotProgress
+                        <com.dock.vost.view.DotView
                             android:id="@+id/ad_cm_dot_progress_2"
-                            class="com.dock.vost.moon.SunAct$DotProgress"
+                            class="com.dock.vost.moon.VitActivity$DotProgress"
                             android:layout_width="0dp"
                             android:layout_height="23dp"
                             android:layout_weight="1"
                             app:dotRadius="1.5dp" />
 
-                        <com.dock.vost.view.BlinkImageView
+                        <com.dock.vost.view.BlinkView
                             android:id="@+id/ad_cm_trickle_indicator"
                             android:layout_width="23dp"
                             android:layout_height="23dp"
