--- a/adsdk/src/main/res/layout/had_card_full.xml
+++ b/adsdk/src/main/res/layout/had_card_full.xml
@@ -12,7 +12,7 @@
         android:background="@android:color/white"
         android:orientation="vertical">
 
-        <android.support.percent.PercentRelativeLayout
+        <androidx.percentlayout.widget.PercentRelativeLayout
             android:id="@+id/native_cover_info"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -40,7 +40,7 @@
                 android:layout_alignParentTop="true"
                 android:padding="8dp" />
 
-        </android.support.percent.PercentRelativeLayout>
+        </androidx.percentlayout.widget.PercentRelativeLayout>
 
         <LinearLayout
             android:id="@+id/native_header_info"
@@ -167,7 +167,7 @@
             android:layout_alignParentBottom="true"
             android:orientation="vertical">
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/native_cancel_btn"
                 style="@style/AdButtonFullStyle_Flat"
                 android:layout_width="match_parent"
@@ -181,7 +181,7 @@
                 android:background="@drawable/had_close_bg"
                 android:text="@android:string/cancel" />
 
-            <android.support.v7.widget.AppCompatButton
+            <Button
                 android:id="@+id/native_action_btn"
                 style="@style/AdButtonFullStyle"
                 android:layout_width="match_parent"
