--- a/adsdk/src/main/res/values/had_styles.xml
+++ b/adsdk/src/main/res/values/had_styles.xml
@@ -8,7 +8,7 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
-    <style name="AdButtonStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="AdButtonStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
@@ -18,7 +18,7 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="AdButtonLargeStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="AdButtonLargeStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
@@ -27,14 +27,14 @@
         <item name="android:background">@drawable/had_action_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
-    <style name="AdButtonFullStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="AdButtonFullStyle">
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:background">@drawable/had_green_bg</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
-    <style name="AdButtonFullStyle_Flat" parent="Base.Widget.AppCompat.Button.Borderless.Colored">
+    <style name="AdButtonFullStyle_Flat">
         <item name="android:layout_height">36dp</item>
         <item name="android:textSize">13sp</item>
         <item name="android:textStyle">bold</item>
