--- a/app/src/main/res/layout/ad_common_native_card_large.xml
+++ b/app/src/main/res/layout/ad_common_native_card_large.xml
@@ -22,7 +22,7 @@
                 android:background="@color/white"
                 android:orientation="vertical">
 
-                <android.support.percent.PercentRelativeLayout
+                <androidx.percentlayout.widget.PercentRelativeLayout
                     android:id="@+id/common_cover_info"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content">
@@ -56,7 +56,7 @@
                         android:layout_height="wrap_content"
                         android:background="@drawable/ad_sponsored_icon"
                         android:gravity="center" />
-                </android.support.percent.PercentRelativeLayout>
+                </androidx.percentlayout.widget.PercentRelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/common_header_info"
@@ -138,9 +138,8 @@
             </LinearLayout>
         </FrameLayout>
 
-        <android.support.v7.widget.AppCompatButton
+        <Button
             android:id="@+id/common_action_btn"
-            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:background="@color/had_colorBtnBlue"
