--- a/app/src/main/res/values/ad_styles.xml
+++ b/app/src/main/res/values/ad_styles.xml
@@ -8,7 +8,7 @@
         <item name="cardUseCompatPadding">true</item>
     </style>
 
-    <style name="AdButtonStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="AdButtonStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
@@ -18,7 +18,7 @@
         <item name="android:textColor">@android:color/white</item>
     </style>
 
-    <style name="AdButtonLargeStyle" parent="Base.Widget.AppCompat.Button.Colored">
+    <style name="AdButtonLargeStyle">
         <item name="android:layout_alignParentRight">true</item>
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_height">36dp</item>
